--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "functions": {
     "api/*.js": {
-      "runtime": "@vercel/node@3.0.0",
+      "runtime": "@vercel/node",
       "maxDuration": 30
     }
   },
